fix few code problems